Modified About me

--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,7 @@ permalink: /aboutme/
 	</div> -->
     <div class="column rightcol">
 
-        <img src="./images/profile_pic.png">
+        <img src="/images/profile_pic.png">
 
     </div>
 
