--- a/aboutme.html
+++ b/aboutme.html
@@ -7,11 +7,11 @@ permalink: /aboutme/
 <div class="row">
 	<div class="column leftcol">
 
-        Hi, folks I'm <strong>Qasim Hassan</strong> @ <strong>aiwithqasim</strong>) a <i>Computer Engineer</i> graduate & <strong><i>Data Engineer</i></strong> by profession from Pakistan. Worked with 48+ different ML Engineers globally to solve energy crises problem. Certified from 10+ International Joints including Microsoft, Udacity, Datacamp & Deeplearning.ai.
+        Hi, folks. I'm <strong>Qasim Hassan</strong> @ <strong>aiwithqasim</strong>) a <i>Computer Engineer</i> graduate & <strong><i>Data Engineer</i></strong> by profession from Pakistan. Worked with 48+ different ML Engineers globally to solve energy crises problem. Certified from 10+ International Joints including Microsoft, Udacity, Datacamp & Deeplearning.ai.
         <br>
-        I have recebtly completed my Bacholor's from Bahria University Karachi Campus (BUKC) . Quality Time and Acts of Service are my primary languages. Highly empathetic, loves to get to deeply know people. Family is a priority. Supporters of growth, my friends, become family.Open-minded and always learning. Draws outside lines to engage in creativity. Big picture thinker, but specializes in subtleties. Like an anomaly, tries to be creatively apart - break status quo. Works hard but can make mistakes - human. Errors, mistakes, and obstacles build strength and character. Appreciates the beauty of education, never stop learning. Uses communication to form relationships, solve problems, understand people and set/achieve goals.
+        I have recently completed my Bachelor's from Bahria University Karachi Campus (BUKC). Quality Time and Acts of Service are my primary languages. Highly empathetic loves to get to know people deeply. Family is a priority. Supporters of growth, my friends, become family. Open-minded and always learning. Draws outside lines to engage in creativity. Big picture thinker but specializes in subtleties.Like an anomaly, tries to be creatively apart - break the status quo. Works hard but can make mistakes - human. Errors, mistakes, and obstacles build strength and character.I appreciate the beauty of education; never stop learning. Uses communication to form relationships, solve problems, understand people, and set/achieve goals.
         <br>
-        I embarked on a career path where I can use these gifts and skills (mentioned above) to help businesses and the people that make up the companies & skills.I love to help people excel and achieve their potential and goals. I love to analyze the things that work, whether that's people's talents or a community's success. I thrive off of understanding that(very data-driven) and redirecting that success and energy to lift those around me.He ultimate goal is to serve people, a community of people and help them thrive.My era Of intreset lies in  Data related fields i:e Data Scientist , Deep Lerning ,Machine learning.My expertise are in 
+        I embarked on a career path where I can use these gifts and skills (mentioned above) to help businesses / skills and those that make up the companies. I love to help people excel and achieve their potential and goals. I love to analyze the things that work, whether people's talents or a community's success. I thrive off of understanding that(very data-driven) and redirecting that success and energy to lift those around me. My ultimate goal is to serve a community of people and help them thrive.My era Of intreset lies in  Data related fields i:e Data Scientist , Deep Lerning ,Machine learning.My expertise are in 
         
         <ul>
         <li>Python (Microsoft Certified)</li> 
@@ -39,9 +39,9 @@ permalink: /aboutme/
 		<a class="twitter-timeline" data-width="600" data-height="700" href="https://twitter.com/rishabh_misra_?ref_src=twsrc%5Etfw">Tweets by rishabh_misra_</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</div> -->
     <div class="column rightcol">
-
-        <img src="/images/profile_pic.png">
-
+        <div class="center">
+            <img src="/images/profile_pic.png">
+        </div>
     </div>
 
 </div>
