Modified About me

--- a/aboutme.html
+++ b/aboutme.html
@@ -15,12 +15,12 @@ permalink: /aboutme/
         
         <ul>
         <li>Python (Microsoft Certified)</li> 
-        <li>SQL / MongoDB</li>
+        <li>SQL </li>   <!-- MongoDB -->
         <li>Data Mining / Extraction</li>
         <li>Data Piplineing (ETL)</li>
         <li>Data Preprocessing (Numpy, Pandas)</li>
         <li>Data Visualization (PowetBI, Matplotlib, Seabron)</li>
-        <li>Big Data Analytics (Spark, Hadoop, Airflow)</li>
+        <li>Big Data Analytics (Spark, Hadoop)</li>   <!-- , Airflow -->
         <li>Exploratory Data Analysis (EDA)</li>
         <li>Deep Learning</li>
         <li>Neural Network Architecture design (CNN)</li>
